src/widgets/widgets/qcombobox_p.h
@@ -221,6 +221,7 @@ private:
     QComboBoxPrivateScroller *bottom = nullptr;
     QElapsedTimer popupTimer;
     bool maybeIgnoreMouseButtonRelease = false;
+    bool closeOnCancel = false;
 
     friend class QComboBox;
     friend class QComboBoxPrivate;
